--- a/sheetCellClient/src/sheetShower/fxml/dynamicAnalysis/dynamicAnalysis.fxml
+++ b/sheetCellClient/src/sheetShower/fxml/dynamicAnalysis/dynamicAnalysis.fxml
@@ -9,74 +9,73 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="604.0" prefWidth="600.0" stylesheets="@../popUpFiltter/dynamic-sheet-style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetShower.fxml.dynamicAnalysis.DynamicAnalysisController">
-   <content>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="602.0" prefWidth="598.0">
+<SplitPane dividerPositions="0.3492462311557789" orientation="VERTICAL" prefHeight="604.0" prefWidth="690.0" stylesheets="@dynamic-sheet-style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetShower.fxml.dynamicAnalysis.DynamicAnalysisController">
+   <items>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
          <children>
-            <SplitPane dividerPositions="0.3492462311557789" orientation="VERTICAL" prefHeight="604.0" prefWidth="600.0">
-               <items>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+            <GridPane layoutY="-1.0" prefHeight="208.0" prefWidth="819.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="64.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="169.0" minHeight="10.0" prefHeight="169.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <GridPane prefHeight="40.0" prefWidth="600.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="10.0" prefWidth="227.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="332.0" minWidth="10.0" prefWidth="244.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.0" minWidth="10.0" prefWidth="86.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.0" minWidth="10.0" prefWidth="66.0" />
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                      <children>
-                        <GridPane layoutY="-1.0" prefHeight="208.0" prefWidth="600.0">
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="23.0" prefWidth="599.0" text="Dynamic Analysis" textAlignment="CENTER" GridPane.columnSpan="3">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="startFilterBtn" disable="true" mnemonicParsing="false" onAction="#FilterRange" text="Analyse" GridPane.columnIndex="2">
+                           <opaqueInsets>
+                              <Insets top="10.0" />
+                           </opaqueInsets></Button>
+                     </children>
+                  </GridPane>
+                  <ScrollPane prefHeight="149.0" prefWidth="819.0" GridPane.rowIndex="1">
+                     <content>
+                        <GridPane fx:id="showCellOptionsGridPane" prefHeight="30.0" prefWidth="594.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="71.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="526.0" minWidth="10.0" prefWidth="526.0" />
                           </columnConstraints>
                           <rowConstraints>
-                            <RowConstraints maxHeight="64.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="169.0" minHeight="10.0" prefHeight="169.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
-                           <children>
-                              <GridPane prefHeight="40.0" prefWidth="600.0">
-                                 <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="10.0" prefWidth="227.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="332.0" minWidth="10.0" prefWidth="244.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.0" minWidth="10.0" prefWidth="86.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.0" minWidth="10.0" prefWidth="66.0" />
-                                    <ColumnConstraints />
-                                    <ColumnConstraints />
-                                 </columnConstraints>
-                                 <rowConstraints>
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                 </rowConstraints>
-                                 <children>
-                                    <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="23.0" prefWidth="599.0" text="Dynamic Analysis" textAlignment="CENTER" GridPane.columnSpan="3">
-                                       <font>
-                                          <Font name="System Bold" size="14.0" />
-                                       </font>
-                                    </Label>
-                                    <Button fx:id="startFilterBtn" disable="true" mnemonicParsing="false" onAction="#FilterRange" text="Analyse" GridPane.columnIndex="2" />
-                                 </children>
-                              </GridPane>
-                              <ScrollPane prefHeight="132.0" prefWidth="600.0" GridPane.rowIndex="1">
-                                 <content>
-                                    <GridPane fx:id="showCellOptionsGridPane" prefHeight="30.0" prefWidth="594.0">
-                                      <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="71.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="526.0" minWidth="10.0" prefWidth="526.0" />
-                                      </columnConstraints>
-                                      <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                      </rowConstraints>
-                                       <padding>
-                                          <Insets left="5.0" right="5.0" />
-                                       </padding>
-                                    </GridPane>
-                                 </content>
-                              </ScrollPane>
-                           </children>
+                           <padding>
+                              <Insets left="5.0" right="5.0" />
+                           </padding>
                         </GridPane>
-                     </children>
-                  </AnchorPane>
-                  <ScrollPane>
-                     <content>
-                        <AnchorPane fx:id="sheetAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="387.0" prefWidth="598.0" />
                      </content>
+                     <opaqueInsets>
+                        <Insets top="10.0" />
+                     </opaqueInsets>
                   </ScrollPane>
-               </items>
-            </SplitPane>
+               </children>
+            </GridPane>
          </children>
       </AnchorPane>
-   </content>
-</ScrollPane>
+      <ScrollPane fx:id="sheetScrollPane" prefHeight="389.0" prefWidth="663.0">
+         <content>
+            <VBox fx:id="sheetVbox" prefHeight="387.0" prefWidth="687.0" />
+         </content>
+      </ScrollPane>
+   </items>
+</SplitPane>
