--- a/sheetCellClient/src/sheetShower/fxml/dynamicSheet/dynamicSheet.fxml
+++ b/sheetCellClient/src/sheetShower/fxml/dynamicSheet/dynamicSheet.fxml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
 
 
-<FlowPane fx:id="dynamicSheet" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" stylesheets="@dynamic-sheet-style.css" fx:controller="sheetShower.fxml.dynamicSheet.DynamicSheetController" xmlns:fx="http://javafx.com/fxml/1" />
+<FlowPane fx:id="dynamicSheet" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="909.0" stylesheets="@dynamic-sheet-style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetShower.fxml.dynamicSheet.DynamicSheetController">
+   <children>
+      <ScrollPane prefHeight="613.0" prefWidth="934.0">
+         <content>
+            <VBox fx:id="dynamicSheetVBox" prefHeight="610.0" prefWidth="932.0">
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
+            </VBox>
+         </content>
+      </ScrollPane>
+   </children>
+</FlowPane>
