--- a/sheetCellClient/src/sheetShower/fxml/headline/headline.fxml
+++ b/sheetCellClient/src/sheetShower/fxml/headline/headline.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.effect.Blend?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane alignment="CENTER" prefHeight="157.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetShower.fxml.headline.HeadlineController">
+<GridPane alignment="CENTER" prefHeight="157.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetShower.fxml.headline.HeadlineController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="88.0" minWidth="10.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="162.0" />
@@ -47,10 +40,6 @@
             <Font size="14.0" />
          </font></Label>
       <Label id="selectedCellLabel" fx:id="selectedCellLbl" alignment="CENTER" layoutX="310.0" layoutY="72.0" text="Selected Cell:" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <font>
-            <Font size="14.0" />
-         </font></Label>
-      <Label alignment="CENTER" layoutX="210.0" layoutY="72.0" prefHeight="48.0" text="Last updated version:" textOverrun="LEADING_ELLIPSIS" GridPane.columnIndex="9" GridPane.rowIndex="1">
          <font>
             <Font size="14.0" />
          </font></Label>
